<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/et_old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_pass"/>

    <EditText
        android:id="@+id/et_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_pass"/>

    <EditText
        android:id="@+id/et_new_pass_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_pass_again"/>

    <Button
        android:id="@+id/btn_update_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/change_password"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/forget_password"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_email"/>

    <Button
        android:id="@+id/btn_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/forget_password"
        android:textColor="@android:color/white"/>

</LinearLayout>
