<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--语音播报-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_title_1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_content_1"
                android:textSize="14sp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <Switch
            android:id="@+id/sw_speak"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <!--短信提醒-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_title_2"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_content_2"
                android:textSize="14sp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <Switch
            android:id="@+id/sw_sms"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <!--检测版本-->
    <LinearLayout
        android:id="@+id/ll_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_title_3"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_content_3"
                android:textSize="14sp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </LinearLayout>
    <!--扫一扫-->
    <LinearLayout
        android:id="@+id/ll_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_title_4"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_scan_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_content_4"
                android:textSize="14sp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </LinearLayout>
    <!--二维码分享-->
    <LinearLayout
        android:id="@+id/ll_qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_title_5"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_content_5"
                android:textSize="14sp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
</LinearLayout>
    <!--我的位置-->
    <LinearLayout
        android:id="@+id/ll_my_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_title_6"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_content_6"
                android:textSize="14sp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>