<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="bottom"
              android:orientation="vertical"
              android:background="@android:color/white"
              android:padding="10dp">

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/take_photo"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/picture"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/cancel"
        android:textColor="@android:color/white"/>

</LinearLayout>